fix: adiciona o placeholder com máscara de data

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </div>
                     <div class="input-group">
                         <label for="date" class="sr-only">Data</label>
-                        <input type="date" name="date" id="date">
+                        <input type="date" name="date" id="date" placeholder="dd/mm/yyyy">
                     </div>
                     <div class="input-group actions">
                         <a href="#" class="button cancel" onclick="Modal.open()">Cancelar</a>
